# skyreader

./: README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: dependencies.py  routes.py
app/core/: config.py  logging.py  security.py
app/data/: examples.py
app/examples/: examples.py  prompt_builder.py
app/exception/: exceptions.py
app/parser/: local.py  parser.py  remote.py
app/schemas/: message.py  responses.py
app/service/: base_parser.py  local_parser.py  parser.py  prompt_builder.py  remote_parser.py
app/services/: message_service.py  parser_service.py
app/train/: generate_training_data.py  llama.py  token_counter.py  tune-local.py  tune.py
app/training/: generate_data.py  token_counter.py  tune_local.py
app/utils/: message_validator.py  prompt_builder.py
scripts/: batch_processor.py
tests/: conftest.py
tests/test_api/: test_routes.py
